--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Главное меню</h2>
-<p>Выберите действие:</p>
-<ul>
-    {% for item in menu_items %}
-        <li><a href="{{ item.url }}">{{ item.title }}</a></li>
-    {% endfor %}
-</ul>
+<div class="panel">
+    <h2>Главное меню</h2>
+    <p class="muted">Выберите действие:</p>
+    <ul>
+        {% for item in menu_items %}
+            <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
