--- a/templates/reports.html
+++ b/templates/reports.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Раздел отчетов</h2>
-<p>Здесь будут размещены отчеты. Доступ предоставлен в соответствии с вашими правами.</p>
+<div class="panel">
+    <h2>Раздел отчетов</h2>
+    <p class="muted">Здесь будут размещены отчеты. Доступ предоставлен в соответствии с вашими правами.</p>
+</div>
 {% endblock %}
