--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Администрирование</h2>
-<p>Раздел для управления пользователями и настройками. Доступен только администраторам.</p>
+<div class="panel">
+    <h2>Администрирование</h2>
+    <p class="muted">Раздел для управления пользователями и настройками. Доступен только администраторам.</p>
+</div>
 {% endblock %}
